tests/lean/t10.lean.expected.out
ite (and p q) (f x) y : N
t10.lean:14:6: error: type mismatch at application
  ite (and p q) q
term
  q
has type
  B
but is expected to have type
  N
cons x (cons y (cons z (cons x (cons y (cons y nil))))) : list
cons x nil : list
nil : list
